testsuite/tests/ghc-regress/rename/should_fail/T1595.hs
module T1595 where

a, b :: Integer -> Tpyo
a = undefined
b = undefined
